@@ -30,6 +30,10 @@ const char * voikko_error_message_cstr(int error_code, const char * language) {
 				return "Poista ylim\xc3\xa4\xc3\xa4r\xc3\xa4inen v\xc3\xa4li.";
 			case GCERR_SPACE_BEFORE_PUNCTUATION:
 				return "Ylim\xc3\xa4\xc3\xa4r\xc3\xa4inen v\xc3\xa4li v\xc3\xa4limerkin edess\xc3\xa4.";
+			case GCERR_EXTRA_COMMA:
+				return "Poista ylim\xc3\xa4\xc3\xa4r\xc3\xa4inen pilkku.";
+			case GCERR_INVALID_SENTENCE_STARTER:
+				return "Virheellinen virkkeen aloittava merkki.";
 		}
 		return "Tuntematon virhe";
 	}
@@ -41,6 +45,10 @@ const char * voikko_error_message_cstr(int error_code, const char * language) {
 				return "Remove extra space.";
 			case GCERR_SPACE_BEFORE_PUNCTUATION:
 				return "Remove space before punctuation.";
+			case GCERR_EXTRA_COMMA:
+				return "Remove extra comma.";
+			case GCERR_INVALID_SENTENCE_STARTER:
+				return "Invalid character at the start of a sentence.";
 		}
 		return "Unknown error";
 	}
