@@ -22,5 +22,7 @@
 #define GCERR_WRITE_TOGETHER 1
 #define GCERR_EXTRA_WHITESPACE 2
 #define GCERR_SPACE_BEFORE_PUNCTUATION 3
+#define GCERR_EXTRA_COMMA 4
+#define GCERR_INVALID_SENTENCE_STARTER 5
 
 #endif
