@@ -15,3 +15,8 @@ Nyt on joten kuten  tehtävä joten kuten hankalampi  virheyhdistelmä.
  [code=2, level=0, descr="", stpos=50, len=2, suggs={}]
 Lause , jossa on pilkun edellä turha väli.
  [code=3, level=0, descr="", stpos=5, len=2, suggs={}]
+Lause,, jossa kaksi peräkkäistä pilkkua.
+ [code=4, level=0, descr="", stpos=6, len=1, suggs={}]
+Aurinko paistaa. (Tämä virke on suluissa.)
+Lause., jossa pilkun edellä piste.
+ [code=5, level=0, descr="", stpos=6, len=1, suggs={}]
